k8s/infra/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: mail
  labels:
    app: mailhog
    team: greenlogistics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
        team: greenlogistics
    spec:
      containers:
        - name: mailhog
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 1025
            - containerPort: 8025
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: mail
  labels:
    app: mailhog
    team: greenlogistics
spec:
  selector:
    app: mailhog
  ports:
    - name: smtp
      port: 1025
      targetPort: 1025
    - name: http
      port: 8025
      targetPort: 8025
