k8s/infra/ingress.yaml
---
# parcel-api : /api/parcels/** → /parcels/**
# Regex (/.+|) capte soit "/sous-chemin" soit chaîne vide → évite le slash final sur le chemin racine
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenlogistics-parcel-api
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /parcels$1
spec:
  ingressClassName: nginx
  rules:
    - host: greenlogistics.local
      http:
        paths:
          - path: /api/parcels(/.+|)
            pathType: ImplementationSpecific
            backend:
              service:
                name: parcel-api
                port:
                  number: 3000
---
# gps-ingestor : /gps/** → /**  (simulate.sh utilise /gps/positions)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenlogistics-gps
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: greenlogistics.local
      http:
        paths:
          - path: /gps(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gps-ingestor
                port:
                  number: 3001
---
# tracker-front : catch-all → SPA
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenlogistics-frontend
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: greenlogistics.local
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tracker-front
                port:
                  number: 3002
